# integration

./: .gitignore  ARCHITECTURE.md  DNS_OAUTH_GITHUB_APP_PLAN.md  ECOSYSTEM_SERVICE_STANDARD_v1.md  FUEL_APP_IMPLEMENTATION_CHECKLIST.md  FUEL_SYSTEM_SPEC.md  GOVERNANCE.md  INFRA_RUNBOOK.md  INTEGRATION_BLUEPRINT.md  LLM_START_HERE.md  LOGLINE_ECOSYSTEM_NORMATIVE_BASE.md  README.md  SECRETS_DOPPLER_RUNBOOK.md  SECURITY.md  SERVICE_TOPOLOGY.md  SUPABASE_FOUNDATION.md  TASKLIST-GERAL.md  audit.toml  cloudflared-config.yml  code247-intentions.md  ecosystem.config.cjs  service_topology.json
.code247/: workspace.manifest.json
.github/: CODEOWNERS
.github/workflows/: contracts-ci.yml  verify-project-minimums.yml
LIXO/: INTEGRATION_BLUEPRINT_ADDENDUM_v1.1.md
artifacts/: integration-severe-report.json  integration-severe-report.md  operations-verify-report.json  operations-verify-report.md
code247.logline.world/: .env.example  .gitignore  CODE247 × VVTV — Integration Contract v1.md  Cargo.toml  Consumo-de-Projetos.md  LLM_START_HERE.md  README.md  TASKLIST.md  dual_agents.db  openapi.yaml
code247.logline.world/.code247/: linear-meta.json  project.json  workspace.manifest.json
code247.logline.world/.github/workflows/: manifest-validation.yml  supply-chain-guardrails.yml
code247.logline.world/docker/: Dockerfile  docker-compose.yml
code247.logline.world/docs/: Code247-Linear-Integration.md  Code247_Ciclo_Completo_Operacao_v1.1.md  Linear-Implementation-Checklist.md  Linear-Setup-Runbook.md  linear-tasklist.json
code247.logline.world/schemas/: code247-linear-runtime.extensions.schema.json  code247-linear-task-source.schema.json  code247-project.schema.json  code247-project.strict.schema.json
code247.logline.world/scripts/: rotate-logs.sh  smoke-p1-state-governance.sh  start.sh  stop.sh  validate-linear-extensions.sh  validate-manifest.sh
code247.logline.world/src/: adapters_rs.rs  api_rs.rs  branch_manager_rs.rs  config_rs.rs  context_builder_rs.rs  file_writer_rs.rs  main.rs  main.ts  manifest_validation_rs.rs  persistence_rs.rs  pipeline_rs.rs  policy_gate_rs.rs  pr_creator_rs.rs  resilience_rs.rs  risk_classifier_rs.rs  state_machine_rs.rs  supabase_sync_rs.rs  test_runner_rs.rs  transition_guard_rs.rs
code247.logline.world/systemd/: dual-agents.service
contracts/: events.registry.json
contracts/openapi/: edge-control.v1.openapi.yaml  inference-plane.v1.openapi.yaml
contracts/schemas/: draft-intention.v1.schema.json  error-envelope.v1.schema.json  gate-decision.v1.schema.json  llm-gateway.chat-response.v1.schema.json  opinion-signal.v1.schema.json  response-envelope.v1.schema.json  rollback-plan.v1.schema.json
edge-control.logline.world/: .env.example  Cargo.toml  LLM_START_HERE.md  README.md  TASKLIST.md
edge-control.logline.world/src/: auth.rs  config.rs  fuel.rs  handlers.rs  main.rs  middleware.rs  models.rs  orchestration.rs  policy.rs  resilience.rs  state_store.rs
llm-gateway.logline.world/: .env.example  BLUEPRINT.md  Cargo.toml  EVIDENCE-AGENT-B.md  LLM_START_HERE.md  README.md  RUNBOOK.md  TASKLIST.md  ecosystem.config.cjs  manifest.intentions.json  modularize.sh  openapi.yaml  refactor.sh
llm-gateway.logline.world/.code247/: workspace.manifest.json
llm-gateway.logline.world/schemas/: workspace.manifest.strict.schema.json
llm-gateway.logline.world/src/: batch.rs  batch_worker.rs  config.rs  db.rs  fuel.rs  main.rs  providers.rs  request_context.rs  routing.rs  types.rs  utils.rs
logic.logline.world/: Cargo.toml  README.md  TASKLIST.md  doppler.yaml  logline.cicd.json
logic.logline.world/.code247/: manifest.intentions.json  workspace.manifest.json
logic.logline.world/crates/logline-cli/: Cargo.toml
logic.logline.world/crates/logline-cli/src/: main.rs  supabase.rs
logic.logline.world/crates/logline-cli/src/commands/: auth_session.rs  cicd.rs  db.rs  deploy.rs  dev.rs  harness.rs  mod.rs  secrets.rs
logic.logline.world/crates/logline-cli/src/integrations/: github.rs  mod.rs  vercel.rs
logic.logline.world/crates/logline-supabase/: Cargo.toml
logic.logline.world/crates/logline-supabase/src/: client.rs  error.rs  fuel.rs  lib.rs  postgrest.rs  realtime.rs  storage.rs
logic.logline.world/docs/: API_CONTRACTS.md  ARCHITECTURE.md  DEPLOYMENT.md  LLM_START_HERE.md  SECURITY.md
logic.logline.world/schemas/: workspace.manifest.schema.json
obs-api.logline.world/: EVIDENCE-FUEL-ECONOMICS-AGENT-B.md  LLM_START_HERE.md  README.md  openapi.yaml  package-lock.json  package.json
obs-api.logline.world/app/: globals.css  layout.tsx  page.tsx  providers.tsx
obs-api.logline.world/components/: AppShell.tsx  StatusBadge.tsx  TopBar.tsx
obs-api.logline.world/db/: bootstrap.ts  index.ts  schema.ts
obs-api.logline.world/lib/: data.ts  theme.tsx
obs-api.logline.world/public/: manifest.json
policy/: policy-set.v1.1.json
scripts/: doppler-secrets-audit.sh  doppler-setup.sh  enforce-severe-gate.sh  fuel-reconcile-daily.sh  generate-capability-catalog.mjs  generate-cookbook.mjs  generate-topology-configs.mjs  generate-workspace-manifest-types.mjs  integration-severe.sh  publish-intentions.sh  security-scan.sh  smoke-code247-stage-lease.sh  smoke-llm-gateway-auth.sh  smoke-obs-api-auth.sh  smoke.sh  sync-canon-schemas.sh  sync-intentions.sh  tasklist-report.sh  validate-contracts.sh  verify-code247-state-governance.sh  verify-operations.sh  verify-project-minimums.sh
(+62 files in other folders)
