[workspace]
# Explicit workspace root - prevents cargo from walking up to home Cargo.toml

[package]
name = "dual-agents-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
jsonschema = { version = "0.18", features = ["draft202012"] }
urlencoding = "2.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "9"
