[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"
authors = ["danvoulez"]
description = "LLM Gateway - OpenAI-compatible API routing to local Ollama instances"
license = "MIT"

[workspace]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"
