[package]
name = "logline-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
logline-api = { path = "../logline-api" }
logline-core = { path = "../logline-core" }
logline-runtime = { path = "../logline-runtime" }
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
rpassword = "7"
keyring = "3"
mime_guess = "2"
chrono = "0.4"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
sha2 = "0.10"
jsonschema = { version = "0.18", features = ["draft202012"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
